--- a/src/app/components/sales/cancelled-orders/cancelled-orders.component.html
+++ b/src/app/components/sales/cancelled-orders/cancelled-orders.component.html
@@ -7,38 +7,30 @@
                     <div class="custom-datatable">
                         <input type='text' class="filter-ngx form-control" placeholder='Search...'
                             (keyup)='updateFilter($event)' />
-                            <button class="pull-left btn btn-warning" [routerLink]="'../create-renewal-order'">Create order <i class="fa fa-plus"></i></button>
-                            <button class="pull-left btn btn-warning ml-2" (click)="RunRenewalOrderJob()"> <i class="fa fa-refresh"></i> Refresh</button>
                             <button class="pull-right btn btn-warning" (click)="exportAsXLSX()">Download</button><br><br>
                         
-                        <!-- <select name="ordersFilter" (change)="filterOrders($event.target.value)">
-                            <option>All orders</option>
-                            <option>Primary order</option>
-                            <option>Renewal order</option>
-                            <option>Replacement order</option>
-                            <option>Return order</option>
-                        </select> -->
+                        
                         <table class="table table-striped table-bordered" >
                           <thead>
                             <tr>
                               <th>Order Id</th>
-                              <th>Primary Id</th>
                               <th>Order date</th>
-                              <th>Customer</th>
                               <th>Mobile</th>
-                              <th>Amount</th>
-                              <th>Payment status</th>
+                              <th>Customer</th>
+                              <th>Transaction value</th>
+                              <th>Transaction status</th>
+                              <th>Delivery status</th>
                             </tr>
                           </thead>
                           <tbody *ngFor="let o of filteredOrders">
                             <tr [routerLink]="['../orders',o.id]">
-                              <td>{{o.order_id}}</td>
                               <td>{{o.primary_id}}</td>
-                              <td>{{o.createdAt | date:'dd MM yyyy HH:mm'}}</td> 
-                              <td>{{o.firstName}}</td>   
-                              <td>{{o.mobile}}</td> 
-                              <td>{{o.grandTotal}}</td>
-                              <td>{{o.paymentStatus}}</td>                       
+                              <td>{{o.createdAt | date:'dd-MMM-yyyy HH:mm' : '+5:30'}}</td>                               
+                              <td>{{o.mobile}}</td>
+                              <td>{{o.firstName}}</td> 
+                              <td>₹ {{o.grandTotal}}</td>  
+                              <td>{{o.paymentStatus}}</td> 
+                              <td>{{o.delivery_status}}</td>                       
                             </tr>                          
                           </tbody>
                         </table>
@@ -49,46 +41,7 @@
     </div>
     <!-- Container-fluid Ends-->
 
-    <!-- <ng-template #content let-c="close" let-d="dismiss">
-        <div class="modal-header text-center">
-          <h4 class="col-12 modal-title text-center" id="modal-basic-title">Update order & refund status</h4>
-          <button type="button" class="close" aria-label="Close" (click)="d()">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-            <div class="row">   
-                <form enctype="multipart/form-data" [formGroup]="updateStatus" (ngSubmit)="updateDeliveryStatus(orderId)">
-                               
-                <div class="col">
-                    <label>Update Delivery Status</label>
-                        <select formControlName="deliveryStatus">
-                            <option>Order booked</option>
-                            <option>Renewed</option>
-                            <option>Waiting for KYC</option>
-                            <option>Delivered</option>
-                            <option>Shipped</option>
-                            <option>Returned</option>
-                            <option>Delivery awaited</option>
-                            <option>Partially delivered</option>
-                        </select>                        
-                </div>
-                <div class="col">
-                    <label>Update payment Status</label>
-                    <select formControlName="refundStatus">
-                            <option>awaiting payment</option>
-                            <option>Paid</option>
-                            <option>Deposit refunded</option>
-                            <option>Complete refund</option>
-                            <option>Refund initiated</option>
-                    </select>
-                </div>
-                
-                <button type="submit">Update</button>
-            </form>
-            </div>
-        </div>
-    </ng-template> -->
+    
 
     <ng-template class="order-details" #orderDetails let-c="close" let-d="dismiss">
         <div class="modal-header text-center">
