--- a/src/app/components/products/digital/pricing-schemes/pricing-schemes.component.html
+++ b/src/app/components/products/digital/pricing-schemes/pricing-schemes.component.html
@@ -1,7 +1,21 @@
 <!-- Container-fluid starts-->
 <div class="container-fluid">
     <div class="row">
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-header">
+                    <h5>Add Pricing scheme</h5>
+                </div>
+                <div class="card-body">
 
+
+                    <input type="text" class="form-control" [(ngModel)]="schemeName" placeholder="Pricing scheme name" /><br>
+                    
+                    <button type="button" class="btn btn-secondary" data-toggle="modal" data-original-title="test"
+                            data-target="#exampleModal" (click)="addPricing()">Add pricing scheme</button>
+                </div>
+            </div>
+        </div>
         <div class="col-sm-12">
             <div class="card specifications">
                 <div class="card-header">
@@ -21,7 +35,7 @@
                               <tr>
                                 <td>{{s.scheme_name}}</td>
                                 <td>
-                                    <div class="specValues" *ngFor="let tp of s.id | tenurePriority">{{tp.tenure}} {{tp.tenure_period}}</div>
+                                    <div class="specValues" *ngFor="let tp of s.id | tenurePriority">{{tp.tenure}} {{tp.tenure_period}} - {{tp.discount}}%</div>
                                 </td>
                                 <td>
                                     <a class="mr-2" data-toggle="modal" data-original-title="test"
